fix:header align

--- a/src/assets/css/v2/app.less
+++ b/src/assets/css/v2/app.less
@@ -1,6 +1,19 @@
 @import "../kv.less";
 @import "./sideblock.less";
 
+@w : 1440px;
+.c-header-inner{
+    max-width: @w;
+    margin:0 auto;
+    .pr;
+}
+.c-header-jx3box{
+    .u-list{
+        max-width: @w;
+        margin:0 auto;
+    }
+}
+
 
 @left: 320px;
 @right: 380px;
@@ -8,7 +21,7 @@
     .mt(@header-height);
     .pr;
     background-color: #f6f8fa;
-    width: 1440px;
+    width: @w;
     .auto(x);
     // display: flex;
     // flex-direction: row-reverse;
